Poly build crashes when overlays are inactive #62159

Closed
opened 2019-03-03 20:14:26 +01:00 by Mauricio Marinho · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970
Processor: i7 8700K

Blender Version
Broken:
(example: 2.80, 779860d34e, blender2.8, 2019-03-02, as found on the splash screen)

Short description of error
Blender crashes when using poly build with overlays off. Seems like it happens on the first time only though. If poly build is used with overlays on, then turned off, it doesn't crash.
This is the error code on console:

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF79BE0397E

Exact steps for others to reproduce the error
Based on the default startup:

  • Select initial cube and enter edit mode
  • Disable overlays
  • Select poly build tool and click

2019-03-03 16_15_19-Blender.png

2019-03-03 16_15_37-Blender.png

**System Information** Operating system: Windows 10 Graphics card: GTX 970 Processor: i7 8700K **Blender Version** Broken: (example: 2.80, 779860d34e26, blender2.8, 2019-03-02, as found on the splash screen) **Short description of error** Blender crashes when using poly build with overlays off. Seems like it happens on the first time only though. If poly build is used with overlays on, then turned off, it doesn't crash. This is the error code on console: Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF79BE0397E **Exact steps for others to reproduce the error** Based on the default startup: - Select initial cube and enter edit mode - Disable overlays - Select poly build tool and click ![2019-03-03 16_15_19-Blender.png](https://archive.blender.org/developer/F6755058/2019-03-03_16_15_19-Blender.png) ![2019-03-03 16_15_37-Blender.png](https://archive.blender.org/developer/F6755059/2019-03-03_16_15_37-Blender.png)

Added subscriber: @MauricioMarinho

Added subscriber: @MauricioMarinho

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-03-04 12:20:32 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555576a7ca3 in edbm_preselect_or_active (C=0x7fffea058188, r_base=0x7fffffffd530, r_ele=0x7fffffffd538)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:98
98			const int object_index = RNA_int_get(gz->ptr, "object_index");
(gdb) bt
#0  0x00005555576a7ca3 in edbm_preselect_or_active (C=0x7fffea058188, r_base=0x7fffffffd530, r_ele=0x7fffffffd538)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:98
#1  0x00005555576a7f62 in edbm_preselect_or_active_init_viewcontext (C=0x7fffea058188, vc=0x7fffffffd660, r_base=0x7fffffffd530, r_ele=0x7fffffffd538)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:151
#2  0x00005555576a7ff8 in edbm_polybuild_face_at_cursor_invoke (C=0x7fffea058188, UNUSED_op=0x7fffcf3ed5c8, event=0x7fffcc3bdf08)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:173
#3  0x000055555723d066 in wm_macro_invoke_internal (C=0x7fffea058188, op=0x7fffcfa8c308, event=0x7fffcc3bdf08, opm=0x7fffcf3ed5c8)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:358
#4  0x000055555723d1a4 in wm_macro_invoke (C=0x7fffea058188, op=0x7fffcfa8c308, event=0x7fffcc3bdf08)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:381
#5  0x00005555572226fa in wm_operator_invoke (C=0x7fffea058188, ot=0x7fffe30883c8, event=0x7fffcc3bdf08, properties=0x7fffffffd8e0, reports=0x0,
    poll_only=false, use_last_properties=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1342
#6  0x0000555557224507 in wm_handler_operator_call (C=0x7fffea058188, handlers=0x7fffe4f74998, handler_base=0x7fffd896f268, event=0x7fffcc3bdf08,
    properties=0x7fffffffd8e0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2122
#7  0x00005555572250de in wm_handlers_do_intern (C=0x7fffea058188, event=0x7fffcc3bdf08, handlers=0x7fffe4f74998)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2440
#8  0x0000555557225def in wm_handlers_do (C=0x7fffea058188, event=0x7fffcc3bdf08, handlers=0x7fffe4f74998)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2698
#9  0x0000555557227367 in wm_event_do_handlers (C=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3119
- 10 0x000055555721ba7f in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418
- 11 0x00005555572161b4 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555576a7ca3 in edbm_preselect_or_active (C=0x7fffea058188, r_base=0x7fffffffd530, r_ele=0x7fffffffd538) at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:98 98 const int object_index = RNA_int_get(gz->ptr, "object_index"); (gdb) bt #0 0x00005555576a7ca3 in edbm_preselect_or_active (C=0x7fffea058188, r_base=0x7fffffffd530, r_ele=0x7fffffffd538) at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:98 #1 0x00005555576a7f62 in edbm_preselect_or_active_init_viewcontext (C=0x7fffea058188, vc=0x7fffffffd660, r_base=0x7fffffffd530, r_ele=0x7fffffffd538) at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:151 #2 0x00005555576a7ff8 in edbm_polybuild_face_at_cursor_invoke (C=0x7fffea058188, UNUSED_op=0x7fffcf3ed5c8, event=0x7fffcc3bdf08) at /home/zed/programmering/blender_master/blender/source/blender/editors/mesh/editmesh_polybuild.c:173 #3 0x000055555723d066 in wm_macro_invoke_internal (C=0x7fffea058188, op=0x7fffcfa8c308, event=0x7fffcc3bdf08, opm=0x7fffcf3ed5c8) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:358 #4 0x000055555723d1a4 in wm_macro_invoke (C=0x7fffea058188, op=0x7fffcfa8c308, event=0x7fffcc3bdf08) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_operator_type.c:381 #5 0x00005555572226fa in wm_operator_invoke (C=0x7fffea058188, ot=0x7fffe30883c8, event=0x7fffcc3bdf08, properties=0x7fffffffd8e0, reports=0x0, poll_only=false, use_last_properties=false) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1342 #6 0x0000555557224507 in wm_handler_operator_call (C=0x7fffea058188, handlers=0x7fffe4f74998, handler_base=0x7fffd896f268, event=0x7fffcc3bdf08, properties=0x7fffffffd8e0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2122 #7 0x00005555572250de in wm_handlers_do_intern (C=0x7fffea058188, event=0x7fffcc3bdf08, handlers=0x7fffe4f74998) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2440 #8 0x0000555557225def in wm_handlers_do (C=0x7fffea058188, event=0x7fffcc3bdf08, handlers=0x7fffe4f74998) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2698 #9 0x0000555557227367 in wm_event_do_handlers (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3119 - 10 0x000055555721ba7f in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418 - 11 0x00005555572161b4 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```

This issue was referenced by 9d82a38d0a

This issue was referenced by 9d82a38d0a7a3894275afb08886fcb2641a13c3b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62159
No description provided.