Fix T62159: Poly build crashes w/o overlays